--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     def lifecycle_version = "2.3.0"
     def arch_version = "2.1.0"
     implementation 'androidx.appcompat:appcompat:1.2.0'
